@@ -1,4 +1,4 @@
-$Id: TODO,v 1.9 2002/09/11 11:55:36 germeier Exp $
+$Id: TODO,v 1.10 2002/09/11 13:44:29 germeier Exp $
 
 * Kernel Module
   - the MPIO can no multitasking, so:
@@ -14,7 +14,7 @@ $Id: TODO,v 1.9 2002/09/11 11:55:36 germeier Exp $
   - use ECC code for every read/write operation!! [done]
   - implement reading of files [DONE]
   - implement writing of files [partially done]
-	* writing to internal memory
+	* writing to internal memory [DONE]
 	* resolve remainig block addressing issues in spare area [DONE]
 	* fix 8.3 filenames
 	* fix timestamps of files
